change to body to fix footer overlap; tried (but failed) to generate styles for bs-primary-500 etc.

--- a/src/ds-styles.scss
+++ b/src/ds-styles.scss
@@ -1,4 +1,27 @@
-@import '../node_modules/bootstrap/scss/bootstrap.scss';
+@import '../node_modules/bootstrap/scss/functions';
+@import '../node_modules/bootstrap/scss/variables';
+@import '../node_modules/bootstrap/scss/mixins';
+@import '../node_modules/bootstrap/scss/utilities';
+
+// $utilities: map-merge(
+//   $utilities,
+//   (
+//     'background-color':
+//       map-merge(
+//         map-get($utilities, 'color'),
+//         (
+//           values: map-merge(map-get(map-get($utilities, 'color'), 'values'), ($theme-colors)),
+//         )
+//       ),
+//   )
+// );
+
+@import '../node_modules/bootstrap/scss/utilities/api';
+
+// general styles
+body {
+  padding-bottom: 62px;
+}
 
 // calendar styles
 .react-calendar {
